@@ -1,55 +1,63 @@
-import Group15.Api.Exercise;
-import Group15.Workout;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import Group15.Model.BodyPart;
+import Group15.Model.Equipment;
+import Group15.Model.Exercise;
+import Group15.Model.Workout;
+import org.junit.jupiter.api.*;
 
-public class WorkoutClassTest {
-    Workout testWorkout;
+import java.util.Collections;
 
-    @Before
-    public void setup() {
+public class WorkoutClassTest
+{
+    static Workout testWorkout;
+
+    @BeforeAll
+    public static void setup()
+    {
         testWorkout = new Workout();
     }
 
     @Test
-    public void testInit() {
-        Assert.assertEquals(0, testWorkout.getExercises().size());
+    public void testInit()
+    {
+        Assertions.assertEquals(0, testWorkout.getExercises().size());
     }
 
     @Test
-    public void testAddExercise() {
-        Exercise pushup = new Exercise("Pushup", "Push your body up and down", "Strength", "Chest", "None", "Easy", "None");
+    public void testAddExercise()
+    {
+        Exercise pushup = new Exercise("Pushup", "Push your body up and down", Collections.singletonList(BodyPart.Chest), Collections.singletonList(Equipment.Bodyweight), "Easy", "None", 3000);
         testWorkout.addExercise(pushup);
-        Assert.assertEquals(1, testWorkout.getExercises().size());
-        Assert.assertEquals("Pushup", testWorkout.getExercises().get(0).title);
+        Assertions.assertEquals(1, testWorkout.getExercises().size());
+        Assertions.assertEquals("Pushup", testWorkout.getExercises().getFirst().title);
         testWorkout.addExercise(new Exercise());
-        Assert.assertNotEquals(1, testWorkout.getExercises().size());
+        Assertions.assertNotEquals(1, testWorkout.getExercises().size());
         testWorkout.addExercise(new Exercise());
-        Assert.assertEquals(3, testWorkout.getExercises().size());
-        Assert.assertNotEquals("Pushup", testWorkout.getExercises().get(1).title);
+        Assertions.assertEquals(3, testWorkout.getExercises().size());
+        Assertions.assertNotEquals("Pushup", testWorkout.getExercises().get(1).title);
     }
 
     @Test
-    public void testRemoveExercise() {
-        Exercise situp = new Exercise("Situp", "Sit up and down", "Strength", "Abs", "None", "Easy", "None");
+    public void testRemoveExercise()
+    {
+        Exercise situp = new Exercise("Situp", "Sit up and down", Collections.singletonList(BodyPart.Abdominals), Collections.singletonList(Equipment.Bodyweight), "Easy", "None", 3000);
         testAddExercise();
         testWorkout.addExercise(situp);
-        Assert.assertTrue(testWorkout.getExercises().contains(situp));
-        Assert.assertEquals(4, testWorkout.getExercises().size());
+        Assertions.assertTrue(testWorkout.getExercises().contains(situp));
+        Assertions.assertEquals(4, testWorkout.getExercises().size());
         testWorkout.removeExercise(situp);
-        Assert.assertEquals(3, testWorkout.getExercises().size());
-        Assert.assertFalse(testWorkout.getExercises().contains(situp));
+        Assertions.assertEquals(3, testWorkout.getExercises().size());
+        Assertions.assertFalse(testWorkout.getExercises().contains(situp));
     }
 
     @Test
-    public void testSwapExercise() {
+    public void testSwapExercise()
+    {
         testRemoveExercise();
-        Assert.assertEquals("Pushup", testWorkout.getExercises().get(0).title);
-        Exercise pullup = new Exercise("Pullup", "Pull your body up and down", "Strength", "Back", "Pullup bar", "Hard", "None");
-        testWorkout.swapExercise(testWorkout.getExercises().get(0), pullup);
-        Assert.assertTrue(testWorkout.getExercises().contains(pullup));
-        Assert.assertFalse(testWorkout.getExercises().contains(new Exercise("Pushup", "Push your body up and down", "Strength", "Chest", "None", "Easy", "None")));
+        Assertions.assertEquals("Pushup", testWorkout.getExercises().getFirst().title);
+        Exercise pullup = new Exercise("Pullup", "Pull your body up and down", Collections.singletonList(BodyPart.Back), Collections.singletonList(Equipment.Bodyweight), "Hard", "None", 3000);
+        testWorkout.swapExercise(testWorkout.getExercises().getFirst(), pullup);
+        Assertions.assertTrue(testWorkout.getExercises().contains(pullup));
+        Assertions.assertFalse(testWorkout.getExercises().contains(new Exercise("Pushup", "Push your body up and down", Collections.singletonList(BodyPart.Chest), Collections.singletonList(Equipment.Bodyweight), "Easy", "None", 3000)));
 
     }
 
